--- a/src/app/news/styles/page.module.scss
+++ b/src/app/news/styles/page.module.scss
@@ -8,6 +8,8 @@
 }
 
 .pageContainer {
+	min-height: 100vh;
+	background-image: linear-gradient(159deg,white 80%,rgb(227, 48, 70) 80%);
 	span {
 		display: block;
 		color: $mainRed;
