--- a/src/components/news-NewsCard/styles/NewsCard.module.scss
+++ b/src/components/news-NewsCard/styles/NewsCard.module.scss
@@ -1,26 +1,21 @@
 @import '@/SCSS/variables';
 
-
-
-
 .Card {
 	height: 400px;
 	position: relative;
-    animation: appearance ease;
-    
-    animation-fill-mode: both;
-    view-timeline-name: --appearance-card;
-    animation-timeline: --appearance-card;
-    animation-range: 10% 40%;
+	animation: appearance ease;
 
+	animation-fill-mode: both;
+	view-timeline-name: --appearance-card;
+	animation-timeline: --appearance-card;
+	animation-range: 10% 40%;
 }
 
 @keyframes appearance {
-    from{
-        opacity: 0;
-        transform: translateY(-50px);
-    }
-   
+	from {
+		opacity: 0;
+		transform: translateY(-50px);
+	}
 }
 
 .Image {
@@ -38,14 +33,14 @@
 .NewsDate {
 	font-size: 18px;
 	margin-bottom: 10px;
-    font-weight: 700;
+	font-weight: 700;
 	color: $fontColor;
 }
 
 .NewsLogo {
 	color: white;
 	font-size: clamp(20px, 5vw, 32px);
-    line-height: 110%;
+	line-height: 110%;
 }
 
 .Card:before {
@@ -57,16 +52,19 @@
 	);
 	content: '';
 	height: 100%;
-	left: 0;
+
 	position: absolute;
+	left: 0;
 	top: 0;
+	
 	transition: background 0.4s ease-out;
 	width: 100%;
 }
-.NewsLink:hover .Card:before{
-    background: linear-gradient(
+.NewsLink:hover .Card:before {
+	background: linear-gradient(
 		180deg,
-		rgb(227, 48, 70,0.2) 24%, 24%,
+		rgb(227, 48, 70, 0.2) 24%,
+		24%,
 		rgba(227, 48, 69, 0.411) 54.87%,
 		rgba(227, 48, 69, 0.678) 89.71%
 	);
