начало верстки админки(help)

--- a/src/app/news/styles/page.module.scss
+++ b/src/app/news/styles/page.module.scss
@@ -10,13 +10,12 @@
 .pageContainer {
 	min-height: 100vh;
 	background-image: linear-gradient(159deg,white 80%,rgb(227, 48, 70) 80%);
-	span {
-		display: block;
-		color: $mainRed;
-		margin: 0;
-	}
+	padding-bottom:25px ;
+	
 }
-
+.headerContainer{
+	padding: 0px 25px;
+}
 .NewsLogo {
 	color: $darkGreen;
 	margin-bottom: 50px;
@@ -27,7 +26,7 @@
 .CenterContainer {
 	max-width: 1350px;
 	margin: 0 auto;
-	padding: 0px 50px;
+	
 }
 
 
@@ -45,7 +44,5 @@
     .NewsContainer {
 		grid-template-columns: 1fr 1fr;
 	}
-    .ImageDecor{
-        display: none;
-    }
+    
 }
