--- a/src/app/team/styles/team.module.scss
+++ b/src/app/team/styles/team.module.scss
@@ -3,6 +3,7 @@
 
 .pageContainer {
 	min-height: 100vh;
+	padding-bottom: 25px;
 	background-image: linear-gradient(119deg,white 80%,rgb(227, 48, 70) 80%);
 	span {
 		display: block;
@@ -11,14 +12,16 @@
 	}
 }
 
-
+.headerContainer{
+	padding: 0px 25px;
+}
 .CenterContainer {
 	max-width: 1350px;
 	margin: 0 auto;
 }
 
 .TeamContainer{
-    padding: 0px 40px;
+    padding: 20px 40px;
 }
 
 @media (max-width: 768px) {
