--- a/src/modules/NewsFilter/styles/NewsFilter.module.scss
+++ b/src/modules/NewsFilter/styles/NewsFilter.module.scss
@@ -4,6 +4,7 @@
     grid-template-columns: 1fr 1fr;
     gap:40px;
     margin-bottom: 30px;
+    padding:0px 10px
 }
 
 @media (max-width: 768px) {
