--- a/src/components/NewsCards/style/NewsCard.module.scss
+++ b/src/components/NewsCards/style/NewsCard.module.scss
@@ -2,7 +2,7 @@
 @import '@/SCSS/variables';
 .Card{
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr 1fr;
+    grid-template-columns: 1fr;
     justify-items: center;
     align-items: center;
     padding: 20px;
@@ -10,10 +10,17 @@
     width: 100%;
     border-top: 1px solid $lightGray;
 }
-.CardDate{
+
+
+.CardName,.bold{
     font-weight: 600
 }
-
+.CardDate{
+    text-wrap: nowrap;
+}
+.CardId, .CardAuthor{
+    text-align: center
+}
 .CardEdit{
     @include FlexCenter;
     width: 100%;
@@ -27,9 +34,3 @@
     transform: scale(1.1);
 }
 
-@media (min-width:320px) and (max-width:768px){
-    .Card{
-        grid-template-columns: 1fr ;
-    }
-    
-}
