--- a/src/SCSS/_mixins.scss
+++ b/src/SCSS/_mixins.scss
@@ -22,3 +22,11 @@
     left: 0;
     top: 0;
 }
+
+@mixin AbsoluteFull {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
