--- a/src/modules/admin/sidebar/style/sidebar.module.scss
+++ b/src/modules/admin/sidebar/style/sidebar.module.scss
@@ -32,13 +32,14 @@ z-index: 10;
 }
 #OpenButton{
     position: absolute;
-    left: 0;
+    right: 0;
     min-width: auto;
+    
+    
 }
 #closingButton{
     min-width: auto;
     position: absolute;
-    left: 0;
     transition: 200ms;
     visibility: hidden;
     opacity: 0;
