--- a/src/modules/news/PageContainer/pageContainer.module.scss
+++ b/src/modules/news/PageContainer/pageContainer.module.scss
@@ -1,16 +1,12 @@
 @import '@/SCSS/mixins';
 @import '@/SCSS/variables';
-.NewsContainer {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	gap: 40px;
-	padding: 0px 50px;
-}
 
 .pageContainer {
 	min-height: 100vh;
+	width: 100%;
 	background-image: linear-gradient(159deg,white 80%,rgb(227, 48, 70) 80%);
 	padding-bottom:25px ;
+
 	
 }
 .headerContainer{
@@ -27,6 +23,9 @@
 	max-width: 1350px;
 	margin: 0 auto;
 	
+}
+#logotype{
+	margin-bottom: 50px;
 }
 
 
