--- a/src/components/GenericCard/styles/GenericCard.module.scss
+++ b/src/components/GenericCard/styles/GenericCard.module.scss
@@ -1,7 +1,7 @@
 @import '@/SCSS/variables';
 
 .Card {
-	height: 400px;
+	// height: 400px;
 	position: relative;
 	animation: appearance ease;
 
@@ -49,28 +49,19 @@
 }
 
 .Card:before {
+	content: '';
+
+	height: 100%;
+	width: 100%;
+
 	background: linear-gradient(
 		180deg,
 		rgba(46, 48, 55, 0) 24%,
 		rgba(46, 48, 55, 0.5) 54.87%,
 		rgba(46, 48, 55, 0.85) 89.71%
 	);
-	content: '';
-	height: 100%;
 
 	position: absolute;
 	left: 0;
 	top: 0;
-	
-	transition: background 0.4s ease-out;
-	width: 100%;
-}
-.CardLink:hover .Card:before {
-	background: linear-gradient(
-		180deg,
-		rgb(227, 48, 70, 0.2) 24%,
-		24%,
-		rgba(227, 48, 69, 0.411) 54.87%,
-		rgba(227, 48, 69, 0.678) 89.71%
-	);
 }
