--- a/src/modules/news/PageContainer/pageContainer.module.scss
+++ b/src/modules/news/PageContainer/pageContainer.module.scss
@@ -1,6 +1,20 @@
 @import '@/SCSS/mixins';
 @import '@/SCSS/variables';
 
+.FiltersContianer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:40px;
+    margin-bottom: 30px;
+    padding:0px 10px
+}
+
+@media (max-width: 768px) {
+    .FiltersContianer{
+        grid-template-columns: 1fr;
+    }
+}
+
 .pageContainer {
 	min-height: 100vh;
 	width: 100%;
